log
Fri 14 Oct 2022 10:13:01 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
6e1127c
Fri 14 Oct 2022 10:16:11 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
d776f65
Fri 14 Oct 2022 10:27:27 PM UTC: 
 heap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:32:5: error: ‘capac’ undeclared (first use in this function)
   32 |     capac = (capac *2) +1;
      |     ^~~~~
heap.c:32:5: note: each undeclared identifier is reported only once for each function it appears in
heap.c:33:32: error: too few arguments to function ‘realloc’
   33 |     pq->heapArray = (heapElem*)realloc(capac*sizeof(heapElem));
      |                                ^~~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:14: note: declared here
  550 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
Compilation failed
b7566d2
